Make product card

--- a/src/style/partials/vars.less
+++ b/src/style/partials/vars.less
@@ -1,1 +1,11 @@
-@col: #0f0;
+/* COLORS */
+@tcol: rgba(0, 0, 0, 255); // text color
+@itcol: #fff; // inverse text color
+@pcol: #7a5955; // primary color
+@scol: #c0b199; // secondary color
+@dcol: #d95252; // danger color
+@wcol: #e4a85f; // warning color
+
+@mainfont: "Balsamiq Sans";
+
+@tdu: .25s; // transition duration
