--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import "partials/vars.less";
+@import "partials/base-elements.less";
+@import "partials/product-cards.less";
+
+*{
+	font-family: @mainfont;
+}
 
 body{
 	background-color: white;
-	color: @col;
-}
-
-h1{
-	color: @col;
+	color: @tcol;
 }
