--- a/src/style/partials/vars.less
+++ b/src/style/partials/vars.less
@@ -5,6 +5,7 @@
 @scol: #c0b199; // secondary color
 @dcol: #d95252; // danger color
 @wcol: #e4a85f; // warning color
+@greycol: #848484;
 
 @mainfont: "Balsamiq Sans";
 
