--- a/src/template/product-card-mini.html
+++ b/src/template/product-card-mini.html
@@ -1,4 +1,4 @@
-<div class="product-card">
+<div class="product-card mini">
 	<div class="product-head">
 		<div class="bubl">-15%</div>
 		<div class="product-label">
@@ -28,9 +28,8 @@
 			</span>
 		</div>
 		<div class="btns">
-			<button class="button buy">
-				Купить
-				<span class="buy-control" data-value="1" data-max="10">
+			<button class="button sm buy">
+				<span class="buy-control" data-value="1">
 					<span class="control-minus">
 						<ion-icon name="chevron-back-outline"></ion-icon>
 					</span>
@@ -39,6 +38,9 @@
 						<ion-icon name="chevron-forward-outline"></ion-icon>
 					</span>
 				</span>
+			</button>
+			<button class="button-cancel">
+				<ion-icon name="close-circle-outline"></ion-icon>
 			</button>
 		</div>
 	</div>
