--- a/src/style/partials/base-elements.less
+++ b/src/style/partials/base-elements.less
@@ -41,19 +41,72 @@ h3{
 	cursor: pointer;
 	transition-duration: @tdu;
 	transition-property: filter;
+
+	&.sm{
+		line-height: 33px;
+		border-radius: 32px;
+		font-size: 16px;
+		height: 32px;
+		padding: 0 8px;
+	}
+
+	.buy-control{
+		.control-minus,
+		.control-plus{
+			opacity: .5;
+			transition-duration: @tdu;
+			transition-property: opacity;
+			cursor: pointer;
+			position: relative;
+			top: 3px;
+			display: inline-block;
+			font-size: 20px;
+
+			&:hover{
+				opacity: 1;
+			}
+		}
+
+		.control-minus{
+			padding-right: 3px;
+		}
+
+		.control-plus{
+			padding-left: 3px;
+		}
+
+		.buy-value{
+			display: inline-block;
+			min-width: 22px;
+			font-weight: 600;
+			text-align: center;
+		}
+	}
 }
 
-.button.sm{
-	line-height: 33px;
-	border-radius: 32px;
-	font-size: 16px;
-	height: 32px;
+.button-cancel{
+	border: 0;
+	background: transparent;
+	width: 27px;
+	height: 27px;
+	border-radius: 100%;
+	font-size: 27px;
+	cursor: pointer;
+	color: @greycol;
+	transition-duration: @tdu;
+	transition-property: filter, color;
 }
 
-.button:focus{
+.button:focus,
+.button-cancel:focus{
 	outline: none;
 }
 
-.button:hover{
+.button:hover,
+.button-cancel:hover{
 	filter: saturate(1.3);
+}
+
+.button-cancel:hover{
+	color: #000;
 }
