--- a/src/style/partials/base-elements.less
+++ b/src/style/partials/base-elements.less
@@ -26,6 +26,17 @@ h3{
 	margin: 24px 0;
 }
 
+a{
+	text-decoration: none;
+	color: @scol;
+	transition-property: color;
+	transition-duration: @tdu;
+}
+
+a:hover{
+	text-decoration: underline;
+}
+
 // Buttons
 
 .button{
