--- a/src/style/main.less
+++ b/src/style/main.less
@@ -2,6 +2,7 @@
 @import "partials/vars.less";
 @import "partials/base-elements.less";
 @import "partials/product-cards.less";
+@import "partials/header.less";
 
 *{
 	font-family: @mainfont;
