--- a/src/style/main.less
+++ b/src/style/main.less
@@ -3,6 +3,7 @@
 @import "partials/base-elements.less";
 @import "partials/product-cards.less";
 @import "partials/header.less";
+@import "partials/carousel.less";
 
 *{
 	font-family: @mainfont;
