--- a/src/style/partials/header.less
+++ b/src/style/partials/header.less
@@ -1,9 +1,25 @@
 .header{
+	@header-height: 80px;
+
 	width: 100%;
-	height: 80px;
+	height: @header-height;
 	background-color: @pcol;
 	color: @itcol;
 	position: relative;
+	transition-property: height;
+	transition-duration: @tdu;
+
+	&:after{
+		content: '';
+		display: block;
+		position: absolute;
+		top: @header-height;
+		left: 0;
+		height: 28px;
+		width: 100%;
+		z-index: 1;
+		background: url('../img/light-brown-wave-invers@1X.png') repeat-x;
+	}
 
 	.navigation{
 		list-style-type: none;
@@ -30,54 +46,6 @@
 					}
 				}
 
-				.navlist{
-					padding: 14px;
-					position: absolute;
-					background-color: #fff;
-					border-radius: 10px;
-					box-shadow: 2px 2px 3px 2px rgba(0,0,0,.1); 
-					top: 35px;
-					left: -15px;
-					width: max-content;
-					opacity: 0;
-					visibility: hidden;
-					transition-duration: @tdu;
-					transition-delay: @tdu;
-					transition-property: opacity, visibility;
-		
-					.navitem{
-						display: block;
-						margin-bottom: 20px;
-
-						.navlink{
-							color: #000;
-							&:hover{
-								color: @pcol;
-							}
-						}
-
-						&:last-of-type{
-							margin-bottom: 0;
-						}
-					}
-
-					& + .navlink{
-						position: relative;
-
-						&:after{
-							content: '';
-							display: block;
-							width: 25px;
-							height: 25px;
-							background: url(../img/chevron-down.png) center no-repeat;
-							background-size: contain;
-							position: absolute;
-							right: -30px;
-							top: -2px;
-						}
-					}
-				}
-
 				&:hover{
 					.navlist{
 						opacity: 1;
@@ -90,10 +58,6 @@
 
 		&.right-nav{
 			float: right;
-
-			.navitem{
-				margin-right: 10px;
-			}
 
 			.navitem:last-of-type{
 				margin-right: 0;
@@ -109,6 +73,7 @@
 			width: 340px;
 			background-color: #fff;
 			position: absolute;
+			z-index: 2;
 			top: -150px;
 			box-shadow: 1px 1px 3px 2px rgba(0, 0, 0, .1); 
 			text-align: center;
@@ -117,8 +82,13 @@
 				.top-logo{
 					position: relative;
 					top: 150px;
+					max-width: 70%;
 				}
 			}
+		}
+
+		&.mob{
+			display: none;
 		}
 	}
 
@@ -165,6 +135,180 @@
 
 		&:hover{
 			filter: brightness(1.1);
+		}
+	}
+
+	.menu{
+		width: 50px;
+		height: 50px;
+		font-size: 45px;
+		text-align: center;
+		background-color: transparent;
+		border: 0;
+		position: fixed;
+		top: 15px;
+		z-index: 1;
+		right: ~"calc(20% - 70px)";
+		color: @itcol;
+
+		&[data-state="close"]{
+			.state-close{
+				display: none;
+			}
+		}
+
+		&[data-state="open"]{
+			.state-open{
+				display: none;
+			}
+		}
+
+		&:focus{
+			outline: none;
+		}
+	}
+}
+
+@media (min-width: 1200px){
+	.header{
+		.navigation{
+			.navlist{
+				.navitem{
+					.navlist{
+						padding: 14px;
+						position: absolute;
+						z-index: 2;
+						background-color: #fff;
+						border-radius: 10px;
+						box-shadow: 2px 2px 3px 2px rgba(0,0,0,.1); 
+						top: 35px;
+						left: -15px;
+						width: max-content;
+						opacity: 0;
+						visibility: hidden;
+						transition-duration: @tdu;
+						transition-delay: @tdu;
+						transition-property: opacity, visibility;
+			
+						.navitem{
+							display: block;
+							margin-bottom: 20px;
+
+							.navlink{
+								color: #000;
+								&:hover{
+									color: @pcol;
+								}
+							}
+
+							&:last-of-type{
+								margin-bottom: 0;
+							}
+						}
+
+						& + .navlink{
+							position: relative;
+
+							&:after{
+								content: '';
+								display: block;
+								width: 25px;
+								height: 25px;
+								background: url(../img/chevron-down.png) center no-repeat;
+								background-size: contain;
+								position: absolute;
+								right: -30px;
+								top: -2px;
+							}
+						}
+					}
+				}
+			}
+		}
+
+		.menu{
+			display: none;
+		}
+	}
+}
+
+@media (max-width: 1200px){
+	.header{
+		position: fixed;
+		top: 0;
+		overflow: hidden;
+		z-index: 50;
+
+		&:after{
+			display: none;
+		}
+
+		.top-logo-wrap{
+			display: none;
+
+			.top-logo-container{
+				width: 180px;
+				height: 180px;
+				top: -80px;
+
+				a{
+					.top-logo{
+						top: 80px;
+						max-width: 60%;
+					}
+				}
+			}
+
+			&.mob{
+				display: block;
+			}
+		}
+
+		.navigation{
+			margin-left: 30px;
+
+			.navlist{
+				.navitem{
+					display: block;
+					margin-top: 30px;
+					font-size: 24px;
+
+					.navlink{}
+
+					.navlist{
+						& + .navlink{
+							display: block;
+							margin-top: 30px;
+
+							&:after{
+								width: 30px;
+								height: 30px;
+								right: -40px;
+								top: 0;
+							}
+						}
+					}
+				}
+			}
+
+			&.left-nav{
+				margin-top: 130px;
+			}
+
+			&.right-nav{
+				float: none;
+			}
+		}
+
+		&.mob{
+			height: 80vh;
+
+		}
+
+		.basket-button{
+			position: fixed;
+			top: 12px;
+			right: 20%;
 		}
 	}
 }
