cats and best products

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -4,6 +4,8 @@
 @import "partials/product-cards.less";
 @import "partials/header.less";
 @import "partials/carousel.less";
+@import "partials/cats.less";
+@import "partials/best-products.less";
 
 *{
 	font-family: @mainfont;
