--- a/src/style/main.less
+++ b/src/style/main.less
@@ -6,6 +6,7 @@
 @import "partials/carousel.less";
 @import "partials/cats.less";
 @import "partials/best-products.less";
+@import "partials/insta.less";
 
 *{
 	font-family: @mainfont;
