--- a/src/style/main.less
+++ b/src/style/main.less
@@ -7,6 +7,7 @@
 @import "partials/cats.less";
 @import "partials/best-products.less";
 @import "partials/insta.less";
+@import "partials/footer.less";
 
 *{
 	font-family: @mainfont;
