--- a/src/template/cats.html
+++ b/src/template/cats.html
@@ -7,7 +7,7 @@
 						<a href="#" class="cat-link">
 							<div class="row">
 								<div class="col-3 cat-icon-container">
-									<img src="/build/img/honey-icon@1X.png" alt="" class="cat-icon">
+									<img src="../build/img/honey-icon@1X.png" alt="" class="cat-icon">
 								</div>
 								<div class="col-9">
 									Крем-мед
@@ -19,7 +19,7 @@
 						<a href="#" class="cat-link">
 							<div class="row">
 								<div class="col-3 cat-icon-container">
-									<img src="/build/img/icons8-пыльца-100@1X.png" alt="" class="cat-icon">
+									<img src="../build/img/icons8-пыльца-100@1X.png" alt="" class="cat-icon">
 								</div>
 								<div class="col-9">
 									Пилок
@@ -31,7 +31,7 @@
 						<a href="#" class="cat-link">
 							<div class="row">
 								<div class="col-3 cat-icon-container">
-									<img src="/build/img/Candle_icon-icons.com_52212@1X.png" alt="" class="cat-icon">
+									<img src="../build/img/Candle_icon-icons.com_52212@1X.png" alt="" class="cat-icon">
 								</div>
 								<div class="col-9">
 									Свічки
@@ -43,7 +43,7 @@
 						<a href="#" class="cat-link">
 							<div class="row">
 								<div class="col-3 cat-icon-container">
-									<img src="/build/img/icn-gift-2-512 копия@1X.png" alt="" class="cat-icon">
+									<img src="../build/img/icn-gift-2-512 копия@1X.png" alt="" class="cat-icon">
 								</div>
 								<div class="col-9">
 									Подарункові
@@ -54,7 +54,7 @@
 				</ul>	
 			</div>
 			<div class="col-12 col-lg-6 col-xl-6 big-cat-img-container">
-				<img src="/build/img/honey_Монтажная область 1@1X.png" class="big-cat-img" alt="">
+				<img src="../build/img/honey_Монтажная область 1@1X.png" class="big-cat-img" alt="">
 			</div>
 		</div>
 	</div>
