--- a/src/template/insta.html
+++ b/src/template/insta.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-12 col-lg-3 col-xl-3">
 				<div class="profile">
-					<img src="/build/img/logo@1X.png" class="avatar" alt="avatar">
+					<img src="../build/img/logo@1X.png" class="avatar" alt="avatar">
 					<a href="#" class="name">
 						vichniy.med
 					</a>
@@ -18,11 +18,11 @@
 	</div>
 
 	<div class="post-carousel">
-		<img src="/build/img/1@1X.png" class="insta-post" alt="" data-href="http://instagram.com">
-		<img src="/build/img/2@1X.png" class="insta-post" alt="" data-href="http://instagram.com">
-		<img src="/build/img/3@1X.png" class="insta-post" alt="" data-href="http://instagram.com">
-		<img src="/build/img/4@1X.png" class="insta-post" alt="" data-href="http://instagram.com">
-		<img src="/build/img/6@1X.png" class="insta-post" alt="" data-href="http://instagram.com">
+		<img src="../build/img/1@1X.png" class="insta-post" alt="" data-href="http://instagram.com">
+		<img src="../build/img/2@1X.png" class="insta-post" alt="" data-href="http://instagram.com">
+		<img src="../build/img/3@1X.png" class="insta-post" alt="" data-href="http://instagram.com">
+		<img src="../build/img/4@1X.png" class="insta-post" alt="" data-href="http://instagram.com">
+		<img src="../build/img/6@1X.png" class="insta-post" alt="" data-href="http://instagram.com">
 	</div>
 </div>
 
