--- a/src/template/header.html
+++ b/src/template/header.html
@@ -4,7 +4,7 @@
 			<div class="col-4 top-logo-wrap mob">
 				<div class="top-logo-container">
 					<a href="/">
-						<img src="/build/img/top-logo.png" alt="Logo" class="top-logo">
+						<img src="../build/img/top-logo.png" alt="Logo" class="top-logo">
 					</a>
 				</div>
 			</div>
@@ -39,7 +39,7 @@
 			<div class="col-4 top-logo-wrap">
 				<div class="top-logo-container">
 					<a href="/">
-						<img src="/build/img/top-logo.png" alt="Logo" class="top-logo">
+						<img src="../build/img/top-logo.png" alt="Logo" class="top-logo">
 					</a>
 				</div>
 			</div>
