--- a/src/style/partials/base-elements.less
+++ b/src/style/partials/base-elements.less
@@ -9,21 +9,21 @@ h1, h2, h3, h4, h5, h6{
 }
 
 h1{
-	font-size: 42px;
-	font-weight: 400;
-	margin: 34px 0;
-}
-
-h2{
-	font-size: 36px;
+	font-size: 38px;
 	font-weight: 400;
 	margin: 28px 0;
 }
 
-h3{
+h2{
 	font-size: 32px;
 	font-weight: 400;
-	margin: 24px 0;
+	margin: 22px 0;
+}
+
+h3{
+	font-size: 28px;
+	font-weight: 400;
+	margin: 20px 0;
 }
 
 a{
@@ -120,4 +120,24 @@ a:hover{
 
 .button-cancel:hover{
 	color: #000;
+}
+
+@media (max-width: 768px){
+	h1{
+		font-size: 28px;
+		font-weight: 400;
+		margin: 18px 0;
+	}
+
+	h2{
+		font-size: 22px;
+		font-weight: 400;
+		margin: 12px 0;
+	}
+
+	h3{
+		font-size: 18px;
+		font-weight: 400;
+		margin: 10px 0;
+	}
 }
