--- a/src/style/partials/footer.less
+++ b/src/style/partials/footer.less
@@ -114,9 +114,19 @@
 
 @media (max-width: 768px){
 	.footer{
+		.navigation{
+			.navlist{
+				.navitem{
+					font-size: 14px;
+				}
+			}
+		}
+
 		.bottom-line{
+			font-size: 14px;
+
 			div{
-				margin-top: 15px;
+				margin-top: 10px;
 				text-align: center;
 
 				&:first-of-type{
@@ -127,6 +137,10 @@
 			.address{
 				text-align: center;
 			}
+		}
+
+		.contact-info{
+			font-size: 14px;
 		}
 	}
 }
