--- a/src/template/carousel.html
+++ b/src/template/carousel.html
@@ -8,7 +8,9 @@
 	$(document).ready(function(){
 		$('.carousel').slick({
 			dots: true,
-			arows: true
+			arows: true,
+			autoplay: true,
+  		autoplaySpeed: 5000
 		});
 	});
 </script>
