--- a/src/style/partials/carousel.less
+++ b/src/style/partials/carousel.less
@@ -1,5 +1,5 @@
 .carousel{
-	@carousel-height: 580px;
+	@carousel-height: 350px;
 
 	width: 100%;
 	height: @carousel-height;
@@ -24,7 +24,7 @@
 		background-repeat: no-repeat;
 		z-index: 1;
 		cursor: pointer;
-		opacity: .7;
+		opacity: .4; 
 		transition-duration: @tdu;
 		transition-property: opacity;
 
@@ -83,6 +83,21 @@
 					}
 				}
 			}
+		}
+	}
+}
+
+@media (max-width: 768px){
+	@carousel-height: 400px;
+	.carousel{
+		height: @carousel-height;
+
+		.slide-img{
+			height: @carousel-height;
+		}
+
+		.slick-arrow{
+			display: none !important;
 		}
 	}
 }
