--- a/src/style/partials/cats.less
+++ b/src/style/partials/cats.less
@@ -1,5 +1,5 @@
 .cats{
-	margin-top: 50px;
+	margin-top: 30px;
 
 	.container{
 		max-width: 100%;
@@ -7,7 +7,7 @@
 
 	.categories{
 		background-color: @scol;
-		padding: 50px 0;
+		padding: 20px 0;
 		border-radius: 0 15px 15px 0;
 
 		.category-list{
@@ -17,13 +17,13 @@
 			float: right;
 
 			.cat-item{
-				margin-bottom: 30px;
-				height: 69px;
-				line-height: 69px;
+				margin-bottom: 10px;
+				height: 49px;
+				line-height: 49px;
 
 				.cat-link{
 					color: #000;
-					font-size: 33px;
+					font-size: 26px;
 
 					&:hover{
 						text-decoration: none;
@@ -36,7 +36,7 @@
 					justify-content: center;
 
 					.cat-icon{
-
+						max-height: 40px;
 					}
 				}
 
@@ -53,6 +53,7 @@
 		background-image: url('../img/Composed-layer@1X.png');
 		background-repeat: no-repeat;
 		background-position: 85% center;
+		background-size:  200px auto;
 
 		.big-cat-img{
 			margin-left: 120px;
@@ -65,7 +66,7 @@
 		.big-cat-img-container{
 			.big-cat-img{
 				margin-left: 60px;
-				width: 300px;
+				width: 240px;
 			}
 		}
 	}
@@ -74,7 +75,6 @@
 @media (max-width: 1500px){
 	.cats{
 		.big-cat-img-container{
-			background: none;
 			.big-cat-img{
 				margin-left: 60px;
 			}
@@ -93,6 +93,7 @@
 
 		.big-cat-img-container{
 			max-width: 570px;
+			background: none;
 		}
 	}
 }
@@ -117,8 +118,17 @@
 @media (max-width: 768px){
 	.cats{
 		.categories{
+			padding: 0;
+
 			.category-list{
 				max-width: 90%;
+				margin-left: 20px;
+
+				.cat-item{
+					.cat-link{
+						font-size: 20px;
+					}
+				}
 			}
 		}
 	}
