--- a/src/style/partials/insta.less
+++ b/src/style/partials/insta.less
@@ -70,7 +70,7 @@
 
 @media (max-width: 992px){
 	.insta{
-		padding: 20px 20px;
+		padding: 10px;
 
 		.profile{
 			.name{
@@ -81,6 +81,17 @@
 		h3{
 			line-height: 40px;
 			margin-top: -20px;
+			font-size: 20px;
+		}
+	}
+}
+
+@media (max-width: 500px){
+	.insta{
+		.post-carousel{
+			img{
+				height: 180px;
+			}
 		}
 	}
 }
