--- a/src/template/best-products.html
+++ b/src/template/best-products.html
@@ -4,198 +4,229 @@
 			<div class="col-12">
 				<h1 class="block-title">Заціни наші кращі смаки</h1>
 			</div>
-
-			<div class="col-12 col-md-6 col-lg-4 col-xl-3">
-				<div class="product-card">
-					<div class="product-head">
-						<div class="bubl">-15%</div>
-						<div class="product-label">
-							Новинка
-						</div>
-						<div class="product-thumb">
-							<img src="https://via.placeholder.com/400" alt="" class="product-pic">
-						</div>
-					</div>
-					<div class="product-body">
-						<h3 class="product-title">Product Title</h3>
-						<div class="product-price">
-							<span class="current">
-								<span class="val">120</span>
-								<span class="currency">грн</span>
-							</span>
-							<span class="old">
-								<span class="val">132</span>
-								<span class="currency">грн</span>
-							</span>
-
-							<span class="sep">/</span>
-
-							<span class="weight">
-								<span class="val">250</span>
-								<span class="unit">г</span>
-							</span>
-						</div>
-						<div class="btns">
-							<button class="button buy">
-								Купить
-								<span class="buy-control" data-value="1" data-max="10">
-									<span class="control-minus">
-										<ion-icon name="chevron-back-outline"></ion-icon>
-									</span>
-									<span class="buy-value">1</span>
-									<span class="control-plus">
-										<ion-icon name="chevron-forward-outline"></ion-icon>
-									</span>
-								</span>
-							</button>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-md-6 col-lg-4 col-xl-3">
-				<div class="product-card">
-					<div class="product-head">
-						<div class="bubl">-15%</div>
-						<div class="product-label">
-							Новинка
-						</div>
-						<div class="product-thumb">
-							<img src="https://via.placeholder.com/400" alt="" class="product-pic">
-						</div>
-					</div>
-					<div class="product-body">
-						<h3 class="product-title">Product Title</h3>
-						<div class="product-price">
-							<span class="current">
-								<span class="val">120</span>
-								<span class="currency">грн</span>
-							</span>
-							<span class="old">
-								<span class="val">132</span>
-								<span class="currency">грн</span>
-							</span>
-
-							<span class="sep">/</span>
-
-							<span class="weight">
-								<span class="val">250</span>
-								<span class="unit">г</span>
-							</span>
-						</div>
-						<div class="btns">
-							<button class="button buy">
-								Купить
-								<span class="buy-control" data-value="1" data-max="10">
-									<span class="control-minus">
-										<ion-icon name="chevron-back-outline"></ion-icon>
-									</span>
-									<span class="buy-value">1</span>
-									<span class="control-plus">
-										<ion-icon name="chevron-forward-outline"></ion-icon>
-									</span>
-								</span>
-							</button>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-md-6 col-lg-4 col-xl-3">
-				<div class="product-card">
-					<div class="product-head">
-						<div class="bubl">-15%</div>
-						<div class="product-label">
-							Новинка
-						</div>
-						<div class="product-thumb">
-							<img src="https://via.placeholder.com/400" alt="" class="product-pic">
-						</div>
-					</div>
-					<div class="product-body">
-						<h3 class="product-title">Product Title</h3>
-						<div class="product-price">
-							<span class="current">
-								<span class="val">120</span>
-								<span class="currency">грн</span>
-							</span>
-							<span class="old">
-								<span class="val">132</span>
-								<span class="currency">грн</span>
-							</span>
-
-							<span class="sep">/</span>
-
-							<span class="weight">
-								<span class="val">250</span>
-								<span class="unit">г</span>
-							</span>
-						</div>
-						<div class="btns">
-							<button class="button buy">
-								Купить
-								<span class="buy-control" data-value="1" data-max="10">
-									<span class="control-minus">
-										<ion-icon name="chevron-back-outline"></ion-icon>
-									</span>
-									<span class="buy-value">1</span>
-									<span class="control-plus">
-										<ion-icon name="chevron-forward-outline"></ion-icon>
-									</span>
-								</span>
-							</button>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-md-6 col-lg-4 col-xl-3">
-				<div class="product-card">
-					<div class="product-head">
-						<div class="bubl">-15%</div>
-						<div class="product-label">
-							Новинка
-						</div>
-						<div class="product-thumb">
-							<img src="https://via.placeholder.com/400" alt="" class="product-pic">
-						</div>
-					</div>
-					<div class="product-body">
-						<h3 class="product-title">Product Title</h3>
-						<div class="product-price">
-							<span class="current">
-								<span class="val">120</span>
-								<span class="currency">грн</span>
-							</span>
-							<span class="old">
-								<span class="val">132</span>
-								<span class="currency">грн</span>
-							</span>
-
-							<span class="sep">/</span>
-
-							<span class="weight">
-								<span class="val">250</span>
-								<span class="unit">г</span>
-							</span>
-						</div>
-						<div class="btns">
-							<button class="button buy">
-								Купить
-								<span class="buy-control" data-value="1" data-max="10">
-									<span class="control-minus">
-										<ion-icon name="chevron-back-outline"></ion-icon>
-									</span>
-									<span class="buy-value">1</span>
-									<span class="control-plus">
-										<ion-icon name="chevron-forward-outline"></ion-icon>
-									</span>
-								</span>
-							</button>
-						</div>
-					</div>
-				</div>
-			</div>
 		</div> 
 	</div>		
+
+	<div class="container products-carousel-container">
+		<div class="products-carousel">
+			<div class="product-card">
+				<div class="product-head">
+					<div class="bubl">-15%</div>
+					<div class="product-label">
+						Новинка
+					</div>
+					<div class="product-thumb">
+						<img src="https://via.placeholder.com/400" alt="" class="product-pic">
+					</div>
+				</div>
+				<div class="product-body">
+					<h3 class="product-title">Product Title</h3>
+					<div class="product-price">
+						<span class="current">
+							<span class="val">120</span>
+							<span class="currency">грн</span>
+						</span>
+						<span class="old">
+							<span class="val">132</span>
+							<span class="currency">грн</span>
+						</span>
+
+						<span class="sep">/</span>
+
+						<span class="weight">
+							<span class="val">250</span>
+							<span class="unit">г</span>
+						</span>
+					</div>
+					<div class="btns">
+						<button class="button buy">
+							Купить
+							<span class="buy-control" data-value="1" data-max="10">
+								<span class="control-minus">
+									<ion-icon name="chevron-back-outline"></ion-icon>
+								</span>
+								<span class="buy-value">1</span>
+								<span class="control-plus">
+									<ion-icon name="chevron-forward-outline"></ion-icon>
+								</span>
+							</span>
+						</button>
+					</div>
+				</div>
+			</div>
+
+			<div class="product-card">
+				<div class="product-head">
+					<div class="bubl">-15%</div>
+					<div class="product-label">
+						Новинка
+					</div>
+					<div class="product-thumb">
+						<img src="https://via.placeholder.com/400" alt="" class="product-pic">
+					</div>
+				</div>
+				<div class="product-body">
+					<h3 class="product-title">Product Title</h3>
+					<div class="product-price">
+						<span class="current">
+							<span class="val">120</span>
+							<span class="currency">грн</span>
+						</span>
+						<span class="old">
+							<span class="val">132</span>
+							<span class="currency">грн</span>
+						</span>
+
+						<span class="sep">/</span>
+
+						<span class="weight">
+							<span class="val">250</span>
+							<span class="unit">г</span>
+						</span>
+					</div>
+					<div class="btns">
+						<button class="button buy">
+							Купить
+							<span class="buy-control" data-value="1" data-max="10">
+								<span class="control-minus">
+									<ion-icon name="chevron-back-outline"></ion-icon>
+								</span>
+								<span class="buy-value">1</span>
+								<span class="control-plus">
+									<ion-icon name="chevron-forward-outline"></ion-icon>
+								</span>
+							</span>
+						</button>
+					</div>
+				</div>
+			</div>
+
+			<div class="product-card">
+				<div class="product-head">
+					<div class="bubl">-15%</div>
+					<div class="product-label">
+						Новинка
+					</div>
+					<div class="product-thumb">
+						<img src="https://via.placeholder.com/400" alt="" class="product-pic">
+					</div>
+				</div>
+				<div class="product-body">
+					<h3 class="product-title">Product Title</h3>
+					<div class="product-price">
+						<span class="current">
+							<span class="val">120</span>
+							<span class="currency">грн</span>
+						</span>
+						<span class="old">
+							<span class="val">132</span>
+							<span class="currency">грн</span>
+						</span>
+
+						<span class="sep">/</span>
+
+						<span class="weight">
+							<span class="val">250</span>
+							<span class="unit">г</span>
+						</span>
+					</div>
+					<div class="btns">
+						<button class="button buy">
+							Купить
+							<span class="buy-control" data-value="1" data-max="10">
+								<span class="control-minus">
+									<ion-icon name="chevron-back-outline"></ion-icon>
+								</span>
+								<span class="buy-value">1</span>
+								<span class="control-plus">
+									<ion-icon name="chevron-forward-outline"></ion-icon>
+								</span>
+							</span>
+						</button>
+					</div>
+				</div>
+			</div>
+
+			<div class="product-card">
+				<div class="product-head">
+					<div class="bubl">-15%</div>
+					<div class="product-label">
+						Новинка
+					</div>
+					<div class="product-thumb">
+						<img src="https://via.placeholder.com/400" alt="" class="product-pic">
+					</div>
+				</div>
+				<div class="product-body">
+					<h3 class="product-title">Product Title</h3>
+					<div class="product-price">
+						<span class="current">
+							<span class="val">120</span>
+							<span class="currency">грн</span>
+						</span>
+						<span class="old">
+							<span class="val">132</span>
+							<span class="currency">грн</span>
+						</span>
+
+						<span class="sep">/</span>
+
+						<span class="weight">
+							<span class="val">250</span>
+							<span class="unit">г</span>
+						</span>
+					</div>
+					<div class="btns">
+						<button class="button buy">
+							Купить
+							<span class="buy-control" data-value="1" data-max="10">
+								<span class="control-minus">
+									<ion-icon name="chevron-back-outline"></ion-icon>
+								</span>
+								<span class="buy-value">1</span>
+								<span class="control-plus">
+									<ion-icon name="chevron-forward-outline"></ion-icon>
+								</span>
+							</span>
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
+
+<script>
+	$(document).ready(function(){
+		$('.products-carousel').slick({
+			slidesToShow: 4,
+			slidesToScroll: 1,
+			autoplay: false,
+			arrows: false,
+			dots: false,
+			responsive: [
+				{
+					breakpoint: 1200,
+					settings: {
+						slidesToShow: 4,
+						slidesToScroll: 1,
+					}
+				},
+				{
+					breakpoint: 1024,
+					settings: {
+						slidesToShow: 3,
+						slidesToScroll: 1,
+					}
+				},
+				{
+					breakpoint: 600,
+					settings: {
+						slidesToShow: 2,
+						slidesToScroll: 1
+					}
+				}
+			]
+		});
+	});	
+</script>
