--- a/src/template/header.html
+++ b/src/template/header.html
@@ -47,7 +47,7 @@
 			<div class="col-12 col-xl-4">
 				<a href="#" class="basket-button">
 					<span class="icon-container">
-						<ion-icon name="bag-handle-outline"></ion-icon>
+						<ion-icon name="bag-handle-outline" class="basket-icon"></ion-icon>
 					</span>
 					<span class="counter">6</span>
 				</a>
