--- a/src/style/main.less
+++ b/src/style/main.less
@@ -8,6 +8,9 @@
 @import "partials/best-products.less";
 @import "partials/insta.less";
 @import "partials/footer.less";
+@import "partials/products-line.less";
+@import "partials/weight-selector.less";
+@import "partials/products-page.less";
 
 *{
 	font-family: @mainfont;
@@ -16,4 +19,5 @@
 body{
 	background-color: white;
 	color: @tcol;
+	padding-top: 80px;
 }
