--- a/src/style/partials/base-elements.less
+++ b/src/style/partials/base-elements.less
@@ -122,6 +122,15 @@ a:hover{
 	color: #000;
 }
 
+.page-wrap{
+	margin-top: 60px;
+}
+
+.page-title{
+	margin-bottom: 20px;
+	font-size: 24px;
+}
+
 @media (max-width: 768px){
 	h1{
 		font-size: 28px;
@@ -139,5 +148,9 @@ a:hover{
 		font-size: 18px;
 		font-weight: 400;
 		margin: 10px 0;
+	}
+
+	.page-wrap{
+		margin-top: 30px; 
 	}
 }
