--- a/src/style/partials/header.less
+++ b/src/style/partials/header.less
@@ -5,7 +5,10 @@
 	height: @header-height;
 	background-color: @pcol;
 	color: @itcol;
-	position: relative;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 50;
 	transition-property: height;
 	transition-duration: @tdu;
 
@@ -333,5 +336,13 @@
 }
 
 @media (max-width: 380px){
-	
+	.header{
+		.top-logo-container{
+			height: 120px;
+
+			.top-logo{
+				
+			}
+		}
+	}
 }
