single product page

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -5,12 +5,14 @@
 @import "partials/header.less";
 @import "partials/carousel.less";
 @import "partials/cats.less";
+@import "partials/swipeable-product-line.less";
 @import "partials/best-products.less";
 @import "partials/insta.less";
 @import "partials/footer.less";
 @import "partials/products-line.less";
 @import "partials/weight-selector.less";
 @import "partials/products-page.less";
+@import "partials/single-product-page.less";
 
 *{
 	font-family: @mainfont;
