--- a/src/template/best-products.html
+++ b/src/template/best-products.html
@@ -1,53 +1,5 @@
-<div class="best-products">
-	<div class="container">
-		<div class="row">
-			<div class="col-12">
-				<h1 class="block-title">Заціни наші кращі смаки</h1>
-			</div>
-		</div> 
-	</div>		
-
-	<div class="container products-carousel-container">
-		<div class="products-carousel">
-			@@include('./product-card.html')
-			@@include('./product-card.html')
-			@@include('./product-card.html')
-			@@include('./product-card.html')
-		</div>
-	</div>
-</div>
-
-<script>
-	$(document).ready(function(){
-		$('.products-carousel').slick({
-			slidesToShow: 4,
-			slidesToScroll: 1,
-			autoplay: false,
-			arrows: false,
-			dots: false,
-			responsive: [
-				{
-					breakpoint: 1200,
-					settings: {
-						slidesToShow: 4,
-						slidesToScroll: 1,
-					}
-				},
-				{
-					breakpoint: 1024,
-					settings: {
-						slidesToShow: 3,
-						slidesToScroll: 1,
-					}
-				},
-				{
-					breakpoint: 600,
-					settings: {
-						slidesToShow: 2,
-						slidesToScroll: 1
-					}
-				}
-			]
-		});
-	});	
-</script>
+@@include('./swipeable-product-line.html', {
+	'cssclass': 'best-products',
+	'title': 'Заціни наші кращі смаки',
+	'total': 4
+})
