--- a/src/template/product-card.html
+++ b/src/template/product-card.html
@@ -28,18 +28,9 @@
 			</span>
 		</div>
 		<div class="btns">
-			<button class="button buy">
-				Купить
-				<span class="buy-control" data-value="1" data-max="10">
-					<span class="control-minus">
-						<ion-icon name="chevron-back-outline"></ion-icon>
-					</span>
-					<span class="buy-value">1</span>
-					<span class="control-plus">
-						<ion-icon name="chevron-forward-outline"></ion-icon>
-					</span>
-				</span>
-			</button>
+			@@include('./buy-btn.html', {
+				"btntext": "Купить"
+			})
 		</div>
 	</div>
 </div>
