--- a/src/style/main.less
+++ b/src/style/main.less
@@ -13,6 +13,7 @@
 @import "partials/weight-selector.less";
 @import "partials/products-page.less";
 @import "partials/single-product-page.less";
+@import "partials/contacts-page.less";
 
 *{
 	font-family: @mainfont;
