--- a/src/style/partials/base-elements.less
+++ b/src/style/partials/base-elements.less
@@ -37,6 +37,10 @@ a:hover{
 	text-decoration: underline;
 }
 
+p{
+	line-height: 22px;
+}
+
 // Buttons
 
 .button{
@@ -59,6 +63,13 @@ a:hover{
 		font-size: 16px;
 		height: 32px;
 		padding: 0 8px;
+	}
+
+	ion-icon{
+		position: relative;
+		display: inline-block;
+		top: 3px;
+		padding-left: 5px;
 	}
 
 	.buy-control{
@@ -129,6 +140,43 @@ a:hover{
 .page-title{
 	margin-bottom: 20px;
 	font-size: 24px;
+}
+
+.input-group{
+	margin: 12px 0;
+}
+
+.input{
+	width: 100%;
+	max-width: 450px;
+	height: 40px;
+	border-radius: 10px; 
+	border: 2px solid @pcol;
+	box-sizing: border-box;
+	padding: 10px; 
+	color: @tcol;
+	background-color: #fff;
+	transition-property: border-color;
+	transition-duration: @tdu;
+
+	textarea&{
+		overflow: auto;
+		resize: none;
+		height: 150px;
+	}
+
+	&::placeholder{
+		color: #555;
+	}
+
+	&:focus{
+		outline: none;
+		border-color: @scol;
+	}
+
+	&:hover{
+		border-color: @scol;
+	}
 }
 
 @media (max-width: 768px){
