--- a/src/style/partials/contacts-page.less
+++ b/src/style/partials/contacts-page.less
@@ -5,6 +5,40 @@
 		.title{
 			margin-bottom: 25px;
 		}
+
+		form{
+			position: relative;
+
+			.notification{
+				background-color: #fff;
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				text-align: center;
+				padding-top: 80px;
+				visibility: hidden;
+				opacity: 0;
+				transition-property: opacity, visibility;
+				transition-duration: @tdu;
+
+				.msg{
+					font-size: 22px;
+					font-weight: normal;
+				}
+
+				ion-icon{
+					font-size: 50px;
+					color: #FFD031;
+				}
+
+				&.show{
+					opacity: 1;
+					visibility: visible;
+				}
+			}
+		}
 	}
 
 	.contact-data{
