--- a/src/style/partials/product-cards.less
+++ b/src/style/partials/product-cards.less
@@ -165,7 +165,7 @@
 		}
 
 		.product-body{
-			padding: 10px;
+			padding: 10px 5px;
 
 			.product-title{
 				font-size: 16px;
@@ -180,14 +180,15 @@
 				margin-top: 15px;
 
 				.button{
-					font-size: 12px;
-					padding: 0 12px;
+					font-size: 14px;
+					padding: 8px 6px;
 					line-height: 22px;
 					border-radius: 25px;
 
 					.buy-control{
 						.control-minus, .control-plus{
 							font-size: 12px;
+							top: -1px;
 						}
 						
 						.buy-value{
@@ -199,3 +200,17 @@
 		}
 	}
 }
+
+// @media (max-width: 400px){
+// 	.product-card{
+// 		.product-body{
+// 			padding: 10px 0;
+
+// 			.btns{ 
+// 				.button{
+// 					padding: 0;
+// 				}
+// 			}
+// 		}
+// 	}
+// }
