--- a/src/style/partials/single-product-page.less
+++ b/src/style/partials/single-product-page.less
@@ -27,25 +27,31 @@
 
 	.price-and-buy-container{
 		.price{
-			line-height: 42px;
+			line-height: 60px;
 
 			.value{
 				font-weight: bold;
-				font-size: 24px;
+				font-size: 28px;
 			}
 
 			.old-value{
-				font-size: 20px;
+				font-size: 24px;
 				text-decoration: line-through;
 				display: inline-block;
 				margin: 0 8px;
 			}
 
 			.unit{
-				font-size: 24px;
+				font-size: 28px;
 			}
 		}
 
 		.buy{}
+	}
+}
+
+@media (max-width: 1200px){
+	.single-product-page{
+		margin: 60px 0;
 	}
 }
