--- a/src/style/partials/base-elements.less
+++ b/src/style/partials/base-elements.less
@@ -57,14 +57,6 @@ p{
 	transition-duration: @tdu;
 	transition-property: filter;
 
-	&.sm{
-		line-height: 33px;
-		border-radius: 32px;
-		font-size: 16px;
-		height: 32px;
-		padding: 0 8px;
-	}
-
 	ion-icon{
 		position: relative;
 		display: inline-block;
@@ -94,7 +86,7 @@ p{
 		}
 
 		.control-plus{
-			padding-left: 3px;
+			padding-left: 0px;
 		}
 
 		.buy-value{
@@ -102,6 +94,28 @@ p{
 			min-width: 22px;
 			font-weight: 600;
 			text-align: center;
+		}
+	}
+
+	&.sm{
+		line-height: 33px;
+		border-radius: 32px;
+		font-size: 18px;
+		height: 50px;
+		padding: 0 8px;
+	}
+
+	&.lg{
+		border-radius: 60px;
+    font-size: 22px;
+    height: 60px;
+    padding: 0 25px;
+
+    .buy-control{
+	    .control-minus,
+			.control-plus{
+				top: 0;
+			}
 		}
 	}
 }
