--- a/src/template/buy-btn.html
+++ b/src/template/buy-btn.html
@@ -1,4 +1,4 @@
-<button class="button buy">
+<button class="button @@additionClass buy">
 	@@btntext
 	<span class="buy-control" data-value="1" data-max="10">
 		<span class="control-minus">
