--- a/src/style/main.less
+++ b/src/style/main.less
@@ -14,6 +14,7 @@
 @import "partials/products-page.less";
 @import "partials/single-product-page.less";
 @import "partials/contacts-page.less";
+@import "partials/reviews-page.less";
 
 *{
 	font-family: @mainfont;
