--- a/src/style/main.less
+++ b/src/style/main.less
@@ -15,6 +15,7 @@
 @import "partials/single-product-page.less";
 @import "partials/contacts-page.less";
 @import "partials/reviews-page.less";
+@import "partials/order-form-page.less";
 
 *{
 	font-family: @mainfont;
