--- a/src/style/partials/base-elements.less
+++ b/src/style/partials/base-elements.less
@@ -157,7 +157,16 @@ p{
 }
 
 .input-group{
-	margin: 12px 0;
+	margin: 14px 0;
+
+	label{
+		font-size: 15px;
+
+		.label-text{
+			display: block;
+			margin-bottom: 8px;
+		}
+	}
 }
 
 .input{
