--- a/src/style/partials/order-form-page.less
+++ b/src/style/partials/order-form-page.less
@@ -51,3 +51,33 @@
 		}
 	}
 }
+
+@media (max-width: 768px){
+	.order-form-page{
+		.product-list-container{
+			.product-list{
+				li{
+					.product-card{
+						.product-body{
+							.btns{
+								.button{
+									&.sm{
+										&.buy{
+											.buy-control{
+												.control-plus,
+												.control-minus{
+													top: -1px;
+													padding: 0 5px;
+												}
+											}
+										}
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
