--- a/src/style/partials/base-elements.less
+++ b/src/style/partials/base-elements.less
@@ -188,6 +188,13 @@ p{
 		height: 150px;
 	}
 
+	&[type="checkbox"]{
+		width: 15px;
+		height: 15px;
+		float: left;
+		margin-right: 8px;
+	}
+
 	&::placeholder{
 		color: #555;
 	}
