--- a/src/style/partials/reviews-page.less
+++ b/src/style/partials/reviews-page.less
@@ -16,7 +16,6 @@
 	.review-screen{
 		width: 220px;
 		height: 445px;
-		overflow: hidden;
 		position: relative;
 		float: right;
 		margin-right: 20px;
@@ -173,6 +172,7 @@
 				width: ~'calc(100% - 17px)';
    			margin-left: 9px;
    			margin-top: -5px;
+   			max-height: 550px;
 			}
 		}
 
