--- a/src/style/main.less
+++ b/src/style/main.less
@@ -16,6 +16,7 @@
 @import "partials/contacts-page.less";
 @import "partials/reviews-page.less";
 @import "partials/order-form-page.less";
+@import "partials/single-page.less";
 
 *{
 	font-family: @mainfont;
