--- a/src/style/partials/reviews-page.less
+++ b/src/style/partials/reviews-page.less
@@ -156,6 +156,10 @@
 
 @media (max-width: 420px){ 
 	.reviews-page{
+		.page-title{
+			margin-bottom: 30px;
+		}
+
 		.review-screen{
 			text-align: center;
 			margin-left: auto;
@@ -171,8 +175,8 @@
 				display: inline-block;
 				width: ~'calc(100% - 17px)';
    			margin-left: 9px;
-   			margin-top: -5px;
-   			max-height: 550px;
+   			margin-top: 10px;
+   			max-height: 535px;
 			}
 		}
 
