--- a/src/style/partials/reviews-page.less
+++ b/src/style/partials/reviews-page.less
@@ -31,8 +31,9 @@
 			width: ~'calc(100% - 20px)';
 			margin-left: 10px;
 			border-radius: 40px;
-			margin-top: 0;
 			z-index: 1;
+	    margin-top: 10px;
+    	max-height: 425px;
 		}
 	}
 
