Make page for single page and article
Issue https://github.com/eugene-sukhodolskiy/honey/issues/9

--- a/html/src/style/partials/single-page.less
+++ b/html/src/style/partials/single-page.less
@@ -4,6 +4,7 @@
 	.thumbnail{
 		overflow: hidden;
 		height: 470px;
+		margin-top: -20px;
 
 		img{
 			width: 100%;
@@ -34,6 +35,10 @@
 @media (max-width: 1200px){
 	.single-page{
 		margin-top: -23px; 
+
+		.thumbnail{
+			margin-top: -55px;
+		}
 	}
 }
 
@@ -41,7 +46,8 @@
 	.single-page{
 		.thumbnail{
 			overflow: hidden;
-			height: 200px;
+			height: 250px;
+			margin-top: -65px;
 		}
 
 		.title{}
