--- a/html/src/style/main.less
+++ b/html/src/style/main.less
@@ -17,6 +17,7 @@
 @import "partials/reviews-page.less";
 @import "partials/order-form-page.less";
 @import "partials/single-page.less";
+@import "partials/btn-up.less";
 
 *{
 	font-family: @mainfont;
