--- a/html/src/template/footer.html
+++ b/html/src/template/footer.html
@@ -66,6 +66,8 @@
 	</div>
 </footer>
 
+@@include('btn-up.html') 
+ 
 <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
