Add dicount percent of product on product page
Issue https://github.com/eugene-sukhodolskiy/honey/issues/22

--- a/html/src/style/partials/single-product-page.less
+++ b/html/src/style/partials/single-product-page.less
@@ -6,6 +6,17 @@
 			width: 100%;
 			height: auto;
 		}
+
+		.bubl{
+			position: absolute;
+			z-index: 2;
+			background-color: @dcol;
+			text-align: center;
+			border-radius: 100%;
+			font-size: 22px;
+			color: @itcol;
+			.bubl-sizing(70px);
+		}
 	}
 
 	.about-product{
