--- a/html/src/style/partials/single-product-page.less
+++ b/html/src/style/partials/single-product-page.less
@@ -5,6 +5,7 @@
 		.product-img{
 			width: 100%;
 			height: auto;
+			border-radius: 10px;
 		}
 
 		.bubl{
@@ -32,7 +33,11 @@
 		}
 
 		.weight-container{
-			margin: 40px 0;
+			margin: 30px 0;
+		}
+
+		.composition{
+			margin-bottom: 30px;
 		}
 	}
 
