Check and fix html/css for 4k screens
Issue https://github.com/eugene-sukhodolskiy/honey/issues/25

--- a/html/src/style/partials/header.less
+++ b/html/src/style/partials/header.less
@@ -16,7 +16,7 @@
 		content: '';
 		display: block;
 		position: absolute;
-		top: @header-height;
+		top: calc(@header-height - 1px);
 		left: 0;
 		height: 28px;
 		width: 100%;
