--- a/html/src/style/partials/single-product-page.less
+++ b/html/src/style/partials/single-product-page.less
@@ -2,6 +2,8 @@
 	margin: 100px 0;
 
 	.product-img-container{
+		position: relative;
+
 		.product-img{
 			width: 100%;
 			height: auto;
@@ -17,6 +19,9 @@
 			font-size: 22px;
 			color: @itcol;
 			.bubl-sizing(70px);
+			left: auto;
+			right: -10px;
+    	top: -10px;
 		}
 	}
 
