--- a/html/src/style/partials/insta.less
+++ b/html/src/style/partials/insta.less
@@ -56,6 +56,7 @@
 			border-radius: 15px;
 			width: 320px;
 			height: 320px;
+			// max-width: 320px;
 			object-fit: cover;
 			object-position: center;
 			padding: 10px;
