--- a/html/src/style/partials/base-elements.less
+++ b/html/src/style/partials/base-elements.less
@@ -64,6 +64,11 @@ p{
 		padding-left: 5px;
 	}
 
+	&.disable{
+		filter: saturate(0) !important; 
+		cursor: default !important; 
+	}
+
 	.buy-control{
 		.control-minus,
 		.control-plus{
