--- a/html/src/style/partials/single-product-page.less
+++ b/html/src/style/partials/single-product-page.less
@@ -1,5 +1,7 @@
 .single-product-page{
 	margin: 100px 0;
+	max-width: 100vw;
+	overflow-x: hidden;
 
 	.product-img-container{
 		position: relative;
@@ -20,8 +22,23 @@
 			color: @itcol;
 			.bubl-sizing(70px);
 			left: auto;
-			right: -10px;
-    	top: -10px;
+			right: 0;
+    	top: 0;
+		}
+
+		.product-label{
+			@label-height: 26px;
+
+			position: absolute;
+			z-index: 2;
+			left: 10px;
+			top: 10px;
+			height: @label-height;
+			line-height: calc(@label-height + 1px);
+			padding: 0 14px;
+			background-color: @wcol;
+			border-radius: @label-height;
+			font-size: 14px;
 		}
 	}
 
