--- a/html/src/template/weight-selector.html
+++ b/html/src/template/weight-selector.html
@@ -4,7 +4,7 @@
 			<span class="value"></span> 
 		</div> 
 	}
-	<span class="unit">грамм</span>
+	<span class="unit">грам</span>
 </div>
   
 <script>
