--- a/html/src/style/partials/single-product-page.less
+++ b/html/src/style/partials/single-product-page.less
@@ -2,6 +2,7 @@
 	margin: 100px 0;
 	max-width: 100vw;
 	overflow-x: hidden;
+	overflow-y: hidden;
 
 	.product-img-container{
 		position: relative;
